//copyright 2013 Computer Science Department, Recursive InterNetworking Architecture (RINA) laboratory, Boston University.
//All rights reserved. Permission to use, copy, modify, and distribute this software and its documentation for any purpose 
//and without fee is hereby granted, provided that the above copyright notice appear in all copies and that both the 
//copyright notice and this permission notice appear in supporting documentation. The RINA laboratory of the Computer 
//Science Department at Boston University makes no representations about the suitability of this software for any purpose.
//It is provided "as is" without express or implied warranty.

package rina.object.gpb;

message members_t{   //carries information about all the members in the DIF
	repeated member_t member = 1;
}

message member_t{   //carries information about a member 
	optional string applicationProcessName = 1;
	optional string applicationProcessInstance = 2;
	optional uint64 address = 3;
       repeated string underlyingDIFs = 4;
}